--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ _includes/notes_graph.json
 .obsidian/
 
 .DS_Store
+
+
+# Ignore Smart Connections folder because embeddings file is large and updated frequently
+.smart-connections
